Update placeholder text in ladle textarea
一、合金用量个位数：随机时排除当前个位，确保与上一炉不同
二、合金下料时间：随机时排除当前值，确保与上一炉不同
三、终点氮含量：兼容整数和小数格式识别；随机时排除当前值，确保与上一炉不同
四、钢包计划表：新增支持「11号包龄21次炉号01760出钢量165吨」格式，两种格式可混用​​​​​​​​​​​​​​​​

--- a/next-heat.html
+++ b/next-heat.html
@@ -118,9 +118,7 @@ textarea::placeholder{color:var(--text-dim)}
   <button class="clear-btn" onclick="clearRecord()">清除工艺记录</button>
 
   <div class="section-label"><span class="n">2</span> 钢包周转计划表</div>
-  <textarea id="ladle" rows="7" placeholder="支持两种格式：
-① 1#钢包 包龄3 120t
-② 11号包龄21次炉号01760出钢量165吨"></textarea>
+  <textarea id="ladle" rows="7" placeholder="支持格式① 1#钢包 包龄3 120t  或  ② 11号包龄21次炉号01760出钢量165吨"></textarea>
   <button class="clear-btn" onclick="clearLadle()">清除钢包计划表</button>
 
   <div class="section-label"><span class="n">3</span> 出钢时间增加（分钟）</div>
